<resources>
    <string name="app_name">SmartPrompter Admin</string>

    <string name="activity_label_active_alarms">Active Alarms</string>
    <string name="activity_label_incomplete_alarms">Incomplete Alarms</string>
    <string name="activity_label_complete_alarms">Complete Alarms</string>

    <string name="authority_alarms">edu.temple.smartprompter.alarms</string>
    <string name="authority_media">edu.temple.smartprompter.media</string>

    <string name="line_break_single">\n</string>
    <string name="line_break_double">\n\n</string>

    <string name="alarm_field_label">Label</string>
    <string name="alarm_field_status">Status</string>
    <string name="alarm_field_date">Date</string>
    <string name="alarm_field_time">Time</string>
    <string name="alarm_field_time_ack">Time Acknowledged</string>
    <string name="alarm_field_time_comp">Time Completed</string>
    <string name="alarm_field_image">Image</string>

    <string name="no_data_available">No records available.</string>
    <string name="not_applicable">N/A</string>

    <string name="nav_active_alarms">Active Alarms</string>
    <string name="nav_complete_alarms">Complete Alarms</string>
    <string name="nav_incomplete_alarms">Incomplete Alarms</string>

    <string name="nav_header_title">SmartPrompter Admin</string>
    <string name="nav_header_subtitle">Temple University</string>
    <string name="nav_header_desc">Navigation Drawer</string>

    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>

    <string name="welcome_intro">Welcome to SmartPrompter Admin!</string>
    <string name="welcome_instructions">Please use the menu in the upper left to review the current lists of alarms.</string>

    <string name="button_activate">Activate</string>
    <string name="button_deactivate">Deactivate</string>
    <string name="button_delete">Delete</string>

    <string name="placeholder_active_alarms">This will be the Active Alarms list.</string>
    <string name="placeholder_complete_alarms">This will be the Complete Alarms list.</string>
    <string name="placeholder_incomplete_alarms">This will be the Incomplete Alarms list.</string>

    <string name="patient_app_namespace">edu.temple.smartprompter</string>
    <string name="patient_app_alarm_receiver">edu.temple.smartprompter.receivers.AlarmReceiver</string>
</resources>
